fixes where worked overflow

--- a/main.css
+++ b/main.css
@@ -18,18 +18,18 @@ SETTINGS
 /*******************************************
 testing
 *******************************************/
-/*#mainrow {
+#companyname {
   background-color: lightblue;
 }
-#mainleftcolumn {
+#scott {
   background-color: lightgreen;
 }
-#innnerleftcolumn{
+#scott{
   background-color: pink;
 }
-#innerrightcolumn{
+#scott{
   background-color: orange;
-}*/
+}
 /*******************************************
 BODY
 *******************************************/
